--- a/styles.css
+++ b/styles.css
@@ -501,3 +501,78 @@ h5 {
     font-size: 2.5rem;
   }
 }
+
+@media screen and (min-width: 1920px) {
+  .menu-btn {
+    position: fixed;
+    z-index: 2;
+    right: 20px;
+    /* left: 20px; */
+    top: 20px;
+    height: 70px;
+    width: 70px;
+    text-align: center;
+    line-height: 70px;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #000000;
+    cursor: pointer;
+    /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
+    /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+    /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
+    background: #ffffff;
+    transition: all 0.3s ease-in-out;
+    z-index: 999999999;
+  }
+
+  .menu-btn:hover {
+    width: 100px;
+    height: 100px;
+    background: #ff329c;
+    line-height: 100px;
+  }
+
+  .hero {
+    background-image: linear-gradient(
+        180deg,
+        rgba(94, 67, 203, 0) 0%,
+        rgba(16, 11, 34, 0.25) 100%
+      ),
+      url("img/desert1.jpg");
+    background-size: 120vw;
+    background-position: 50% 60%;
+    background-repeat: no-repeat;
+    height: 70%;
+  }
+
+  button {
+    background-color: #cd152b;
+    color: white;
+    padding: 18px 32px;
+    border: 6px solid rgba(255, 255, 255, 0);
+    font-family: "Satoshi";
+    font-weight: 600;
+    font-size: 2rem;
+    margin-left: 10px;
+    float: right;
+    transition: 0.4s;
+  }
+  
+  button:hover {
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(255, 255, 255);
+    border: 6px solid rgb(255, 255, 255);
+    cursor: pointer;
+  }
+
+  h3 {
+    font-family: "Aileron";
+    font-weight: 500;
+    font-size: 5rem;
+    margin-left: 100px;
+    margin-top: 30vh;
+    margin-right: 150px;
+    color: #ffffff;
+    text-align: left;
+  }
+}
