--- a/srcstyles.css
+++ b/srcstyles.css
@@ -17,6 +17,15 @@
   font-style: normal;
 }
 
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  color: #ffffff;
+  background-color: #04020e;
+  font-family: "Aileron";
+}
+
+
 .section {
   width: 100%;
   height: 100%;
@@ -458,4 +467,106 @@ p.title2 {
     position: relative;
   }
   
+}
+
+@media screen and (min-width: 1920px) {
+
+  html {
+    font-size: 80%;
+    overflow-x: hidden;
+    color: #ffffff;
+    background-color: #04020e;
+    font-family: "Aileron";
+  }
+  
+  p.newlecture {
+    font-family: "Aileron";
+    font-weight: 500;
+    font-size: 2.5rem;
+    margin-left: 100px;
+    margin-top: 30vh;
+    margin-left: 65px;
+    margin-right: 100px;
+    color: #ffffff;
+    text-align: left;
+  }
+
+  .media-scroller {
+    --_spacer: 15px;
+    display: grid;
+    gap: var(--_spacer);
+    grid-auto-flow: column;
+    grid-auto-columns: 19%;
+  
+    padding: 0 var(--_spacer) var(--_spacer);
+  
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    background-color: #04020e00;
+  }
+  
+  .media-scroller--with-groups {
+    grid-auto-columns: 80%;
+  }
+  
+  .media-group {
+    display: grid;
+    gap: var(--_spacer);
+    grid-auto-flow: column;
+  }
+  
+  .media-element {
+    display: grid;
+  
+    gap: 8px;
+    background: #222222;
+    border-radius: 3px;
+    box-shadow: var(--shadow-2);
+    height: 50vh;
+    transition: 0.4s ease-in-out;
+    cursor: pointer;
+  }
+  
+  .media-element:hover {
+    display: grid;
+    background: #cd152b;
+    border-radius: 3px;
+    box-shadow: var(--shadow-2);
+    height: 45vh;
+  }
+  
+  .media-element > img {
+    inline-size: 100%;
+    height: 30vh;
+    object-fit: cover;
+    object-position: center;
+    float: bottom;
+    border-radius: 3px;
+    transition: 0.25s ease-out;
+  }
+  
+  .media-element:hover img {
+    inline-size: 100%;
+    height: 35vh;
+    object-fit: cover;
+    object-position: center;
+    float: bottom;
+    border-radius: 3px;
+  }
+
+  
+p.title {
+  font-family: "Aileron";
+  font-size: 2.8rem;
+  font-weight: 600;
+  padding-left: 10px;
+}
+
+p.title2 {
+  font-family: "Aileron";
+  font-size: 2.5rem;
+  font-weight: 300;
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
 }
