--- a/orientation.css
+++ b/orientation.css
@@ -1,24 +1,51 @@
-@font-face {
-    font-family: "Aileron";
-    src: url("./aileron-semibold-webfont.woff2") format("woff2"),
-      url("aileron-semibold-webfont.woff") format("woff");
-    font-weight: 500;
-    font-style: normal;
-  }
-
- {
-background-color:black;
-
-
-
+video.orientation-vid {
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 30px;
+  z-index: 10;
+  color: red;
 }
 
+.background {
+  width: 100%;
+  height: 100%;
+  background: rgb(4, 2, 14);
+  background: linear-gradient(
+    180deg,
+    rgba(4, 2, 14, 1) 52%,
+    rgba(205, 21, 43, 1) 100%
+  );
 
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+}
 
+h1 {
+  text-align: center;
+  padding-top: 20px;
+  z-index: 10;
+  text-decoration: underline;
+  text-decoration-color: rgba(205, 21, 43, 1);
+}
 
+h4 {
+  font-size: 2.5rem;
+  margin-left: 20%;
+  margin-top: 30px;
+  z-index: 10;
+  text-align: center;
+  margin-right: 20%;
+}
 
-.shrek{
-    text-align: center;
-    font-family: "Aileron" ;
-   
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 5rem;
+  }
+  h4 {
+    font-size: 2rem;
+    margin-right: 30%;
+    margin-left: 30%;
+  }
 }
