--- a/srcstyles.css
+++ b/srcstyles.css
@@ -25,7 +25,6 @@ html {
   font-family: "Aileron";
 }
 
-
 .section {
   width: 100%;
   height: 100%;
@@ -272,6 +271,21 @@ p.title2 {
 /*mobile*/
 
 @media screen and (max-width: 768px) {
+
+  h6 {
+    font-family: "Satoshi";
+    font-size: 5.9rem;
+    text-align: center;
+    line-height: 6rem;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    position: absolute;
+    top: 35%;
+  }
+
+  html {
+    font-size: 40%;
+  }
   .media-scroller {
     --_spacer: 10px;
     display: grid;
@@ -322,7 +336,6 @@ p.title2 {
     animation-name: opacity;
     animation-duration: 3s;
   }
-  
 
   h4.centre {
     padding-top: 30px;
@@ -336,7 +349,7 @@ p.title2 {
 
   .media-element {
     display: grid;
-    gap: 10px;
+    gap: 5px;
     background: rgb(4, 2, 14);
     background: linear-gradient(
       180deg,
@@ -345,7 +358,7 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 350px;
+    height: 375px;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
@@ -361,7 +374,7 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 350px;
+    height: 375px;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
@@ -378,7 +391,7 @@ p.title2 {
 
   .media-element:hover img {
     inline-size: 100%;
-    height: 280px;
+    height: 250px;
     object-fit: cover;
     object-position: center;
     float: bottom;
@@ -399,8 +412,8 @@ p.title2 {
   p.newlecture {
     padding: 0px;
     margin: 0px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
     margin-top: 30px;
     text-align: center;
   }
@@ -420,7 +433,7 @@ p.title2 {
     height: auto;
     margin-left: 25%;
     margin-right: 25%;
-    margin-top: 20%;
+    margin-top: 100px;
     margin-bottom: 0px;
     padding-bottom: 0px;
   }
@@ -438,7 +451,7 @@ p.title2 {
     width: 100%;
     height: 100%;
     padding: 0;
-    padding-bottom: 50px;
+    padding-bottom: 1px;
     margin: 0;
   }
 
@@ -453,7 +466,6 @@ p.title2 {
     float: bottom;
   }
 
-
   .gallery {
     background-color: #04020e;
     background-image: url("./img/Clubs-BG.svg");
@@ -466,11 +478,9 @@ p.title2 {
     margin: 0;
     position: relative;
   }
-  
 }
 
 @media screen and (min-width: 1920px) {
-
   html {
     font-size: 80%;
     overflow-x: hidden;
@@ -478,7 +488,7 @@ p.title2 {
     background-color: #04020e;
     font-family: "Aileron";
   }
-  
+
   p.newlecture {
     font-family: "Aileron";
     font-weight: 500;
@@ -496,77 +506,86 @@ p.title2 {
     display: grid;
     gap: var(--_spacer);
     grid-auto-flow: column;
-    grid-auto-columns: 19%;
-  
+    grid-auto-columns: 18%;
+
     padding: 0 var(--_spacer) var(--_spacer);
-  
+
     overflow-x: auto;
     overscroll-behavior-inline: contain;
     background-color: #04020e00;
   }
-  
+
   .media-scroller--with-groups {
     grid-auto-columns: 80%;
   }
-  
+
   .media-group {
     display: grid;
     gap: var(--_spacer);
     grid-auto-flow: column;
   }
-  
+
   .media-element {
     display: grid;
-  
+
     gap: 8px;
-    background: #222222;
+    background: rgb(4, 2, 14);
+    background: linear-gradient(
+      180deg,
+      rgba(4, 2, 14, 1) 69%,
+      rgba(205, 21, 43, 1) 100%
+    );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 50vh;
+    height: 60vh;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
-  
+
   .media-element:hover {
     display: grid;
-    background: #cd152b;
+    background: rgb(4, 2, 14);
+    background: linear-gradient(
+      180deg,
+      rgba(4, 2, 14, 1) 69%,
+      rgba(205, 21, 43, 1) 100%
+    );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 45vh;
+    height: 60vh;
   }
-  
+
   .media-element > img {
     inline-size: 100%;
-    height: 30vh;
+    height: 40vh;
     object-fit: cover;
     object-position: center;
     float: bottom;
     border-radius: 3px;
     transition: 0.25s ease-out;
   }
-  
+
   .media-element:hover img {
     inline-size: 100%;
-    height: 35vh;
+    height: 40vh;
     object-fit: cover;
     object-position: center;
     float: bottom;
     border-radius: 3px;
   }
 
-  
-p.title {
-  font-family: "Aileron";
-  font-size: 2.8rem;
-  font-weight: 600;
-  padding-left: 10px;
-}
+  p.title {
+    font-family: "Aileron";
+    font-size: 2.8rem;
+    font-weight: 600;
+    padding-left: 10px;
+  }
 
-p.title2 {
-  font-family: "Aileron";
-  font-size: 2.5rem;
-  font-weight: 300;
-  padding-left: 10px;
-  padding-bottom: 10px;
-}
+  p.title2 {
+    font-family: "Aileron";
+    font-size: 2rem;
+    font-weight: 300;
+    padding-left: 10px;
+    padding-bottom: 10px;
+  }
 }
