--- a/styles.css
+++ b/styles.css
@@ -500,6 +500,10 @@ h5 {
   h2 {
     font-size: 2.5rem;
   }
+
+  .wrapper ul li a {
+  line-height: 30px;
+}
 }
 
 @media screen and (min-width: 1920px) {
