--- a/Pages/Clubs/clubs.css
+++ b/Pages/Clubs/clubs.css
@@ -37,7 +37,7 @@ html {
   display: grid;
   gap: var(--_spacer);
   grid-auto-flow: column;
-  grid-auto-columns: 18%;
+  grid-auto-columns: 42%;
 
   padding: 0 var(--_spacer) var(--_spacer);
 
@@ -63,7 +63,7 @@ html {
   background: #222222;
   border-radius: 3px;
   box-shadow: var(--shadow-2);
-  height: 400px;
+  height: 700px;
   transition: 0.4s ease-in-out;
   cursor: pointer;
 }
@@ -73,7 +73,7 @@ html {
   background: #cd152b;
   border-radius: 3px;
   box-shadow: var(--shadow-2);
-  height: 400px;
+  height: 700px;
 }
 
 .media-element > img {
@@ -106,15 +106,15 @@ h4 {
 }
 
 p.title {
-  font-family: "Aileron";
-  font-size: 2rem;
+  font-family: "Satoshi";
+  font-size: 4rem;
   font-weight: 600;
   padding-left: 10px;
 }
 
 p.title2 {
   font-family: "Aileron";
-  font-size: 1.3rem;
+  font-size: 2rem;
   font-weight: 300;
   padding-left: 10px;
   padding-bottom: 10px;
@@ -151,7 +151,7 @@ p.title2 {
     display: grid;
     gap: var(--_spacer);
     grid-auto-flow: row;
-    grid-auto-columns: 80%;
+    grid-auto-columns: 90%;
 
     padding: 0;
 
@@ -160,20 +160,20 @@ p.title2 {
   }
 
   .media-scroller--with-groups {
-    grid-auto-columns: 80%;
+    grid-auto-columns: 90%;
   }
 
   p.title {
     font-family: "Satoshi";
-    font-size: 4.5rem;
+    font-size: 3rem;
     font-weight: 600;
     padding-left: 10px;
   }
 
   p.title2 {
     font-family: "Aileron";
-    font-size: 3rem;
-    font-weight: 300;
+    font-size: 1.75rem;
+    font-weight: 100;
     padding-left: 10px;
     padding-bottom: 10px;
   }
@@ -218,10 +218,10 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 425px;
-    margin-left: 15vw;
-    margin-right: 15vw;
-    width: 70vw;
+    height: 500px;
+    margin-left: 7.5vw;
+    margin-right: 7.5vw;
+    width: 85vw;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
@@ -237,7 +237,7 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 425px;
+    height: 500px;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
