--- a/Pages/SRC/srcstyles.css
+++ b/Pages/SRC/srcstyles.css
@@ -32,7 +32,7 @@ html {
   padding: 0%;
   margin: 0%;
   background-image:
-    url("/img/SRC-20222023-BG-mobile.jpg");
+    url("/img/SRC-20222023-BG.jpg");
   background-size: 120vw;
   background-repeat: none;
   position: relative;
@@ -320,12 +320,8 @@ p.title2 {
     opacity: 1;
     padding: 0%;
     margin: 0%;
-    background-image: linear-gradient(
-        180deg,
-        rgba(16, 11, 34, 0.678) 30%,
-        rgba(94, 67, 203, 0.603) 90%
-      ),
-      url("img/SRC-20222023-BG-mobile.jpg");
+    background-image:
+      url('/img/SRC-20222023-BG-mobile.jpg');
     background-size: 150vw;
     background-repeat: none;
     position: relative;
