--- a/styles.css
+++ b/styles.css
@@ -503,6 +503,92 @@ h5 {
   .wrapper ul li a {
     line-height: 25px;
   }
+
+  *, *:before, *:after {
+    box-sizing: border-box;
+  }
+  
+  
+  .footer {
+    display: none;
+    flex-flow: row wrap;
+    padding: 30px 30px 20px 30px;
+    color: #2f2f2f;
+    background-color: #04020e;
+    border-top: 1px solid #e5e5e5;
+  }
+  
+  .footer > * {
+    flex:  1 100%;
+  }
+  
+  .footer__addr {
+    display: none
+  }
+  
+  .footer__logo {
+    display: none
+  }
+  
+  .footer__addr h2 {
+    display: none
+  }
+  
+  .nav__title {
+    display: none; }
+  
+  .footer address {
+    display: none
+  }
+  
+  .footer__btn {
+    display: none
+  }
+  
+  .footer ul {
+    display: none }
+  
+  .footer li {
+    line-height: 2em;
+  }
+  
+  .footer a {
+    text-decoration: none;
+  }
+  
+  .footer__nav {
+    display: flex;
+    flex-flow: row wrap;
+  }
+  
+  .footer__nav > * {
+    flex: 1 50%;
+    margin-right: 1.25em;
+  }
+  
+  .nav__ul a {
+    color: #999;
+  }
+  
+  .nav__ul--extra {
+    column-count: 2;
+    column-gap: 1.25em;
+  }
+  
+  .legal {
+    display: flex;
+    flex-wrap: wrap;
+    color: #999;
+  }
+    
+  .legal__links {
+    display: flex;
+    align-items: center;
+  }
+  
+  .heart {
+    color: #2f2f2f;
+  }
 }
 
 @media screen and (min-width: 1920px) {
@@ -585,17 +671,6 @@ h5 {
   box-sizing: border-box;
 }
 
-
-body {
-  font-family: acumin-pro, system-ui, sans-serif;
-  margin: 0;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  font-size: 14px;
-  background-color: #f4f4f4;
-  align-items: start;
-  min-height: 100vh;
-}
 
 .footer {
   display: flex;
