--- a/styles.css
+++ b/styles.css
@@ -615,11 +615,11 @@ body {
   margin-bottom: 2em;
 }
 
-.footer__logo {
-  font-family: 'Pacifico', cursive;
-  font-weight: 400;
-  text-transform: lowercase;
-  font-size: 5rem;
+.footer__logo img{
+  padding: 5px;
+  background-color: #ffffffc7;
+  border-radius: 5px;
+  border-color: #ffffffc7;
 }
 
 .footer__addr h2 {
@@ -634,11 +634,12 @@ body {
 }
 
 .footer address {
-  font-style: normal;
+  
   color: #999;
 }
 
 .footer__btn {
+  font-style: normal;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -646,9 +647,12 @@ body {
   font-weight: 500;
   height: 36px;
   max-width: max-content;
-  background-color: #cd152b;
-  border-radius: 100px;
-  color: #04020e;
+  border-radius: 1px;
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0);
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(255, 255, 255);
+  cursor: pointer;
   line-height: 0;
   margin: 0.6em 0;
   font-size: 2rem;
