--- a/styles.css
+++ b/styles.css
@@ -504,91 +504,11 @@ h5 {
     line-height: 25px;
   }
 
-  *, *:before, *:after {
-    box-sizing: border-box;
-  }
-  
-  
-  .footer {
-    display: none;
-    flex-flow: row wrap;
-    padding: 30px 30px 20px 30px;
-    color: #2f2f2f;
-    background-color: #04020e;
-    border-top: 1px solid #e5e5e5;
-  }
-  
-  .footer > * {
-    flex:  1 100%;
-  }
-  
-  .footer__addr {
-    display: none
-  }
-  
-  .footer__logo {
-    display: none
-  }
-  
-  .footer__addr h2 {
-    display: none
-  }
-  
-  .nav__title {
-    display: none; }
-  
-  .footer address {
-    display: none
-  }
-  
-  .footer__btn {
-    display: none
-  }
-  
-  .footer ul {
-    display: none }
-  
-  .footer li {
-    line-height: 2em;
-  }
-  
-  .footer a {
-    text-decoration: none;
-  }
-  
-  .footer__nav {
-    display: flex;
-    flex-flow: row wrap;
-  }
-  
-  .footer__nav > * {
-    flex: 1 50%;
-    margin-right: 1.25em;
-  }
-  
-  .nav__ul a {
-    color: #999;
-  }
-  
-  .nav__ul--extra {
-    column-count: 2;
-    column-gap: 1.25em;
-  }
-  
-  .legal {
-    display: flex;
-    flex-wrap: wrap;
-    color: #999;
-  }
-    
-  .legal__links {
-    display: flex;
-    align-items: center;
-  }
-  
-  .heart {
-    color: #2f2f2f;
-  }
+  h2.nav__title {
+    margin-top: 3vh;
+    margin-bottom: 0.8vh;
+}
+
 }
 
 @media screen and (min-width: 1920px) {
@@ -698,8 +618,8 @@ h5 {
 }
 
 .footer__addr h2 {
-  margin-top: 1.3em;
-  font-size: 15px;
+  margin-top: 0.8em;
+  font-size: 2rem;
   font-weight: 400;
 }
 
@@ -709,7 +629,7 @@ h5 {
 }
 
 .footer address {
-  
+  font-size: 1rem;
   color: #999;
 }
 
@@ -729,9 +649,9 @@ h5 {
   border: 2px solid rgb(255, 255, 255);
   cursor: pointer;
   line-height: 0;
-  margin: 0.6em 0;
+  margin: 1em 0;
   font-size: 2rem;
-  padding: 0 1.3em;
+  padding: 1em 1.3em;
 }
 
 .footer ul {
@@ -762,7 +682,7 @@ h5 {
 }
 
 .nav__ul--extra {
-  column-count: 2;
+  column-count: 1;
   column-gap: 1.25em;
 }
 
@@ -804,3 +724,6 @@ h5 {
     flex: 2 0px;
   }
 }
+
+/* centre a div */
+
