--- a/styles.css
+++ b/styles.css
@@ -507,8 +507,17 @@ h5 {
   h2.nav__title {
     margin-top: 3vh;
     margin-bottom: 0.8vh;
-}
-
+  }
+  .footer {
+    display: none;
+    bottom: 0;
+    display: flex;
+    flex-flow: row wrap;
+    padding: 30px 30px 20px 30px;
+    color: #2f2f2f;
+    background-color: #04020e;
+    border-top: 1px solid #e5e5e5;
+  }
 }
 
 @media screen and (min-width: 1920px) {
@@ -586,11 +595,11 @@ h5 {
   }
 }
 
-
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
-
 
 .footer {
   display: flex;
@@ -602,7 +611,7 @@ h5 {
 }
 
 .footer > * {
-  flex:  1 100%;
+  flex: 1 100%;
 }
 
 .footer__addr {
@@ -610,7 +619,7 @@ h5 {
   margin-bottom: 2em;
 }
 
-.footer__logo img{
+.footer__logo img {
   padding: 5px;
   background-color: #ffffffc7;
   border-radius: 5px;
@@ -669,7 +678,7 @@ h5 {
 
 .footer__nav {
   display: flex;
-	flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .footer__nav > * {
@@ -691,7 +700,7 @@ h5 {
   flex-wrap: wrap;
   color: #999;
 }
-  
+
 .legal__links {
   display: flex;
   align-items: center;
@@ -711,19 +720,18 @@ h5 {
   .footer__nav > * {
     flex: 1;
   }
-  
+
   .nav__item--extra {
     flex-grow: 2;
   }
-  
+
   .footer__addr {
     flex: 1 0px;
   }
-  
+
   .footer__nav {
     flex: 2 0px;
   }
 }
 
 /* centre a div */
-
