--- a/Pages/Orientation/orientation.css
+++ b/Pages/Orientation/orientation.css
@@ -29,6 +29,10 @@ h1 {
   z-index: 10;
 }
 
+h3 {
+  padding-bottom: 50px;
+}
+
 h4 {
   font-size: 2.5rem;
   margin-left: 20%;
@@ -42,6 +46,11 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 50px;
+}
+
+span.stars.italic {
+  margin-bottom: 50px;
 }
 
 @media screen and (max-width: 768px) {
@@ -55,7 +64,7 @@ h4 {
   }
 
   .content {
-    margin: 0 0 80px 0;
+    margin: 0 0 100px 0;
   }
 
   video.orientation-vid {
@@ -67,7 +76,5 @@ h4 {
     color: red;
   }
 
-  span.stars.italic {
-    margin-bottom: 0px;
-  }
+  
 }
