--- a/Pages/SRC/srcstyles.css
+++ b/Pages/SRC/srcstyles.css
@@ -37,6 +37,9 @@ html {
   position: relative;
   animation-name: opacity;
   animation-duration: 3s;
+  display: block;
+  height: 100vh;
+  width: 100%;
 }
 
 /*2023/2022 SRC**/
@@ -210,6 +213,20 @@ p.newlecture {
   height: 350px;
 }
 
+.media-scroller {
+  --_spacer: 15px;
+  display: grid;
+  gap: var(--_spacer);
+  grid-auto-flow: column;
+  grid-auto-columns: 50%;
+
+  padding: 0 var(--_spacer) var(--_spacer);
+
+  overflow-x: auto;
+  overscroll-behavior-inline: contain;
+  background-color: #04020e00;
+}
+
 .media-element > img {
   inline-size: 100%;
   height: 250px;
@@ -275,6 +292,14 @@ p.title2 {
     margin-right: 12.5%;
     position: absolute;
     top: 35%;
+  }
+
+  div.section {
+    height: 100vh;
+    width: 100%;
+    background-color: #04020e;
+    padding: 0;
+    margin: 0;
   }
 
   html {
