--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ html {
   font-family: "Aileron";
 }
 
-
 /*fonts*/
 /*navbar*/
 
@@ -216,11 +215,15 @@ h3 {
   font-family: "Aileron";
   font-weight: 500;
   font-size: 3.5rem;
-  margin-left: 100px;
-  margin-top: 38vh;
-  margin-right: 150px;
   color: #ffffff;
   text-align: left;
+}
+
+.quote {
+  font-size: 2rem;
+  text-align: center;
+  margin-inline: 80px;
+  font-family: "Satoshi";
 }
 
 .anco {
@@ -228,13 +231,9 @@ h3 {
   font-weight: 600;
   font-size: 2.5rem;
   font-weight: 900;
-  margin-left: 100px;
-  margin-top: 40px;
-  margin-right: 0px;
   letter-spacing: 0.02em;
   color: #ffffff;
   text-align: left;
-  padding-bottom: 100px;
 }
 
 .italic {
@@ -243,20 +242,36 @@ h3 {
 }
 
 .chair-img {
+  display: flex;
   width: 25vw;
   height: auto;
-  margin-left: 10%;
-  margin-top: 40%;
   border-radius: 60vw;
-  padding-bottom: 100px;
 }
 
 .intro {
   background-color: #04020e;
   width: 100%;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
+  margin-block: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div.left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 40%;
+}
+
+div.right {
+  display: flex;
+  flex-basis: 60%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-inline: 80px;
 }
 
 .newlecture {
@@ -274,17 +289,6 @@ h3 {
   padding: 0;
   margin: 0;
   position: relative;
-}
-
-.left {
-  width: 30%;
-  float: left;
-  position: relative;
-}
-
-.right {
-  width: 70%;
-  float: right;
 }
 
 /*scrollbar*/
@@ -320,7 +324,6 @@ h3 {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  
 }
 
 h4.centre {
@@ -379,11 +382,30 @@ h5 {
   height: 30%;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-inline: 80px;
+}
+
 /* general styling */
 
 @media screen and (max-width: 768px) {
   html {
     font-size: 30%;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-inline: 0px;
+  }
+
+  .content > h3 {
+    font-size: 3.5rem;
+    margin-inline: 20px;
   }
 
   .hero {
@@ -437,9 +459,6 @@ h5 {
     font-family: "Aileron";
     font-weight: 300;
     font-size: 3.8rem;
-    margin-left: 30px;
-    margin-top: 5vh;
-    margin-right: 30px;
     color: #ffffff;
     text-align: center;
   }
@@ -451,8 +470,6 @@ h5 {
     font-weight: 35px;
     color: #ffffff;
     text-align: center;
-    margin: 0px;
-    margin-top: 20px;
   }
 
   .italic {
@@ -475,20 +492,23 @@ h5 {
     line-height: 6rem;
   }
 
+  .quote {
+    margin-inline: 30px !important;
+    font-size: 3rem;
+  }
+
+  .right {
+    margin-inline: 20px !important;
+  }
+
   .chair-img {
     width: 50vw;
-    height: auto;
-    margin-left: 25%;
-    margin-top: 25%;
-    padding-bottom: 0px;
   }
 
   .intro {
-    background-color: #04020e;
-    width: 100%;
-    height: 60%;
-    padding: 0;
-    margin: 0;
+    flex-direction: column;
+    gap: 50px;
+
   }
 
   .gallery {
@@ -497,17 +517,6 @@ h5 {
     height: 100%;
     padding: 0;
     margin: 0;
-  }
-
-  .left {
-    width: 100%;
-    float: top;
-    position: relative;
-  }
-
-  .right {
-    width: 100%;
-    float: bottom;
   }
 
   h1 {
@@ -626,7 +635,6 @@ h5 {
   color: #2f2f2f;
   background-color: #04020e;
   border-top: 1px solid #e5e5e5;
-  
 }
 
 .footer > * {
@@ -751,9 +759,4 @@ h5 {
   .footer__nav {
     flex: 2 0px;
   }
-  
 }
-
-
-
-
